fix: reduce list padding due to padding used for scrollbar

--- a/src/components/message-input/styles.scss
+++ b/src/components/message-input/styles.scss
@@ -192,7 +192,7 @@
       padding: 4px;
 
       &__list {
-        padding: 8px !important;
+        padding: 4px 8px 4px 4px !important;
         max-height: 200px;
         overflow-y: auto;
       }
